react final form install
react final form install

--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -8,6 +8,6 @@
 }
 
 .drop:hover {
-    background-color: blueviolet;
-    color: whitesmoke;
+    background-color: blueviolet !important;
+    color: whitesmoke !important;
 }
