changing to styled components
home page

--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -8,6 +8,6 @@
 }
 
 .drop:hover {
-    background-color: blueviolet !important;
+    background-color: cornflowerblue !important;
     color: whitesmoke !important;
 }
